--- a/01_NETFLIX_EDA.ipynb
+++ b/01_NETFLIX_EDA.ipynb
@@ -32,7 +32,8 @@
       "metadata": {
         "id": "-fYQovhEsAZz",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "2ea28fb8-6905-4b94-e9cc-98977e569f1d"
       },
@@ -84,7 +85,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "HVgQcnfXKUpw",
         "outputId": "e6f8ec38-ccf1-4a98-9291-dba9f9d331fd"
@@ -501,7 +503,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "-ooFIA3MLG18",
         "outputId": "78f8eb2a-a8c9-4863-9289-373797b41a8f"
@@ -895,7 +898,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1474
         },
         "id": "PWmgCOAcLKkV",
         "outputId": "61af0b8b-517c-44e6-ae6a-1f238c6d208a"
@@ -1095,7 +1098,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "GNABeWTtLPd0",
         "outputId": "a995c56b-d788-42c5-a002-3eadb2ee7ce0"
@@ -1138,7 +1142,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 1618
         },
         "id": "ionrdMldLTKu",
         "outputId": "77f43622-916a-4f65-92fe-72eeba404393"
@@ -2486,7 +2490,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "qe5Rlly1MH6n",
         "outputId": "a88a5daf-e2c3-4312-86e3-fb233735f2f4"
@@ -2530,7 +2535,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "BMI9lHqrMKro",
         "outputId": "6581c415-36cf-424a-c6ba-40e9cbc43457"
@@ -2572,7 +2578,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "coA9fyD_MNhH",
         "outputId": "276b9b38-a522-4a1f-9c68-be51d8dc8344"
@@ -2605,11 +2612,12 @@
         "os.kill(os.getpid(), 9)\n"
       ],
       "metadata": {
-        "id": "lLUt4W6VOdv-",
-        "outputId": "fda33403-9113-4c19-f695-fd25931546cf",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "lLUt4W6VOdv-",
+        "outputId": "fda33403-9113-4c19-f695-fd25931546cf"
       },
       "execution_count": null,
       "outputs": [
@@ -2667,11 +2675,12 @@
         "print(\"Surprise import OK!\")\n"
       ],
       "metadata": {
-        "id": "eSEL1ldWO0uA",
-        "outputId": "8b923cdc-1d45-459c-b515-5a72fcd3fd25",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "eSEL1ldWO0uA",
+        "outputId": "8b923cdc-1d45-459c-b515-5a72fcd3fd25"
       },
       "execution_count": 1,
       "outputs": [
@@ -2775,11 +2784,12 @@
         "    print(iid, f\"{s:.3f}\")\n"
       ],
       "metadata": {
-        "id": "nayFAqOoPLml",
-        "outputId": "428130b7-be17-4e06-beef-c5af92ad3b0a",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 0
+        },
+        "id": "nayFAqOoPLml",
+        "outputId": "428130b7-be17-4e06-beef-c5af92ad3b0a"
       },
       "execution_count": 2,
       "outputs": [
@@ -2845,12 +2855,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "SA5JkA3iR0Yi",
-        "outputId": "bbf63287-e675-4613-ddfc-c528c371cb17",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        }
+        },
+        "id": "SA5JkA3iR0Yi",
+        "outputId": "bbf63287-e675-4613-ddfc-c528c371cb17"
       },
       "execution_count": 3,
       "outputs": [
