--- a/01_NETFLIX_EDA.ipynb
+++ b/01_NETFLIX_EDA.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1qTaCuaUJJCV9Qw6GQMoV",
+      "authorship_tag": "ABX9TyNGPY/UB1clrE+i4HqFxigs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2603,52 +2603,65 @@
         "# 1. Instalar dependências\n",
         "!pip -q install scikit-surprise pyarrow fastparquet\n",
         "\n",
-        "# 2. Corrigir numpy (remover v2 e instalar v1.26.x)\n",
+        "# 2. Corrigir numpy\n",
         "!pip uninstall -y numpy\n",
         "!pip install \"numpy<2\"\n",
         "\n",
-        "# 3. Reiniciar runtime automaticamente (isso vai derrubar e reiniciar o kernel)\n",
-        "import os\n",
+        "# 3. Reiniciar runtime automaticamente\n",
         "os.kill(os.getpid(), 9)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 499
         },
         "id": "lLUt4W6VOdv-",
-        "outputId": "fda33403-9113-4c19-f695-fd25931546cf"
+        "outputId": "40dac804-902c-4d34-bceb-f636ae817b37"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.1/62.1 kB\u001b[0m \u001b[31m1.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.6/16.6 MB\u001b[0m \u001b[31m75.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "opencv-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 2.3.3 which is incompatible.\n",
-            "tensorflow 2.19.0 requires numpy<2.2.0,>=1.26.0, but you have numpy 2.3.3 which is incompatible.\n",
-            "cupy-cuda12x 13.3.0 requires numpy<2.3,>=1.22, but you have numpy 2.3.3 which is incompatible.\n",
-            "numba 0.60.0 requires numpy<2.1,>=1.22, but you have numpy 2.3.3 which is incompatible.\n",
-            "opencv-python-headless 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 2.3.3 which is incompatible.\n",
-            "opencv-contrib-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 2.3.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mFound existing installation: numpy 2.3.3\n",
-            "Uninstalling numpy-2.3.3:\n",
-            "  Successfully uninstalled numpy-2.3.3\n",
+            "Found existing installation: numpy 1.26.4\n",
+            "Uninstalling numpy-1.26.4:\n",
+            "  Successfully uninstalled numpy-1.26.4\n",
             "Collecting numpy<2\n",
-            "  Downloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m61.0/61.0 kB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.0 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.0/18.0 MB\u001b[0m \u001b[31m42.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: numpy\n",
+            "  Using cached numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (61 kB)\n",
+            "Using cached numpy-1.26.4-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.0 MB)\n",
+            "Installing collected packages: numpy\n",
             "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
             "opencv-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
             "opencv-python-headless 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\n",
             "thinc 8.3.6 requires numpy<3.0.0,>=2.0.0, but you have numpy 1.26.4 which is incompatible.\n",
             "opencv-contrib-python 4.12.0.88 requires numpy<2.3.0,>=2; python_version >= \"3.9\", but you have numpy 1.26.4 which is incompatible.\u001b[0m\u001b[31m\n",
             "\u001b[0mSuccessfully installed numpy-1.26.4\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "numpy"
+                ]
+              },
+              "id": "eec39cbe637c4fa9baa220fd418daa0a"
+            }
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'os' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3185336396.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# 3. Reiniciar runtime automaticamente\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkill\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetpid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
           ]
         }
       ]
@@ -2668,39 +2681,22 @@
       "cell_type": "code",
       "source": [
         "import numpy, pandas\n",
-        "print(\"NumPy:\", numpy.__version__)     # tem que imprimir 1.26.x\n",
-        "print(\"Pandas:\", pandas.__version__)\n",
+        "print(\"NumPy:\", numpy.__version__)\n",
         "\n",
         "from surprise import Dataset, Reader, SVD\n",
         "print(\"Surprise import OK!\")\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
-        },
-        "id": "eSEL1ldWO0uA",
-        "outputId": "8b923cdc-1d45-459c-b515-5a72fcd3fd25"
+        "id": "eSEL1ldWO0uA"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "NumPy: 1.26.4\n",
-            "Pandas: 2.2.2\n",
-            "Surprise import OK!\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# =========================\n",
         "# POC: Sistema de Recomendação (SVD - filtragem colaborativa)\n",
-        "# =========================\n",
         "\n",
         "# Carregar bibliotecas\n",
         "import os, math\n",
@@ -2709,19 +2705,17 @@
         "from surprise import Dataset, Reader, SVD\n",
         "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
         "\n",
-        "# -------------------------\n",
+        "\n",
         "# 1) Carregar parquet (base preparada na EDA)\n",
-        "# -------------------------\n",
         "PARQUET_PATH = \"/content/netflix_poc_clean.parquet\"\n",
         "assert os.path.exists(PARQUET_PATH), \"Preciso rodar a EDA antes para gerar este arquivo.\"\n",
         "\n",
         "df = pd.read_parquet(PARQUET_PATH)[[\"user_id\",\"movie_id\",\"rating\",\"date\"]]\n",
         "df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
         "\n",
-        "# -------------------------\n",
         "# 2) Split leave-one-out por usuário\n",
         "#    -> última avaliação de cada usuário fica para validação\n",
-        "# -------------------------\n",
+        "\n",
         "df = df.sort_values([\"user_id\",\"date\"])\n",
         "val_idx = df.groupby(\"user_id\").tail(1).index\n",
         "val_df = df.loc[val_idx].copy()\n",
@@ -2729,9 +2723,7 @@
         "\n",
         "print(\"Train:\", train_df.shape, \"| Val:\", val_df.shape)\n",
         "\n",
-        "# -------------------------\n",
         "# 3) Treino com SVD\n",
-        "# -------------------------\n",
         "reader = Reader(rating_scale=(1,5))\n",
         "train_data = Dataset.load_from_df(train_df[[\"user_id\",\"movie_id\",\"rating\"]], reader)\n",
         "trainset = train_data.build_full_trainset()\n",
@@ -2740,9 +2732,7 @@
         "svd = SVD(n_factors=100, n_epochs=20, lr_all=0.005, reg_all=0.02, random_state=42)\n",
         "svd.fit(trainset)\n",
         "\n",
-        "# -------------------------\n",
         "# 4) Avaliação na validação\n",
-        "# -------------------------\n",
         "# predição de cada par (user, movie) da validação\n",
         "preds = [svd.predict(int(u), int(i)).est\n",
         "         for u,i in val_df[[\"user_id\",\"movie_id\"]].itertuples(index=False, name=None)]\n",
@@ -2754,10 +2744,8 @@
         "mae  = mean_absolute_error(y_true, y_hat)\n",
         "print(f\"SVD POC -> RMSE: {rmse:.4f} | MAE: {mae:.4f}\")\n",
         "\n",
-        "# -------------------------\n",
         "# 5) Baseline simples (média global)\n",
         "#    -> só p/ mostrar que o modelo melhora algo\n",
-        "# -------------------------\n",
         "global_mean = train_df[\"rating\"].mean()\n",
         "rmse_base = math.sqrt(mean_squared_error(y_true, np.full_like(y_true, global_mean)))\n",
         "mae_base  = mean_absolute_error(y_true, np.full_like(y_true, global_mean))\n",
@@ -2765,9 +2753,7 @@
         "print(f\"Baseline (média) -> RMSE: {rmse_base:.4f} | MAE: {mae_base:.4f}\")\n",
         "print(f\"Ganho vs baseline (ΔRMSE): {(rmse_base - rmse):.4f}\")\n",
         "\n",
-        "# -------------------------\n",
         "# 6) Top-10 recomendações para um usuário qualquer (demonstração)\n",
-        "# -------------------------\n",
         "user_example = int(train_df[\"user_id\"].iloc[0])  # pegar o primeiro só para testar\n",
         "seen = set(train_df.loc[train_df[\"user_id\"]==user_example, \"movie_id\"].unique())\n",
         "all_items = set(train_df[\"movie_id\"].unique())\n",
@@ -2785,13 +2771,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "nayFAqOoPLml",
-        "outputId": "428130b7-be17-4e06-beef-c5af92ad3b0a"
+        "outputId": "27d9b81e-bec0-4ba2-987a-a9265c844eaf"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -2823,7 +2808,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "\n",
-        "# valores vindos da POC (ajustar se necessário)\n",
+        "# valores vindos da POC\n",
         "rmse_svd, mae_svd = 1.0190, 0.8323\n",
         "rmse_base, mae_base = 1.0776, 0.9019\n",
         "\n",
@@ -2860,9 +2845,9 @@
           "height": 407
         },
         "id": "SA5JkA3iR0Yi",
-        "outputId": "bbf63287-e675-4613-ddfc-c528c371cb17"
+        "outputId": "be8ad68c-7bc2-4545-fee4-3602a340bd38"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
